[package]
name = "hyperlane-macros"
version = "10.9.7"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """A comprehensive collection of procedural macros for building HTTP servers with enhanced functionality. This crate provides attribute macros that simplify HTTP request handling, protocol validation, response management, and request data extraction."""
keywords = ["http", "request", "response", "tcp", "cross-platform"]
repository = "https://github.com/hyperlane-dev/hyperlane-macros.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github",
    "logs",
    "img",
    "**/*.log",
    "debug",
]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.42"
hyperlane = "10.23.2"
proc-macro2 = "1.0.104"
syn = { version = "2.0.111", features = ["full"] }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
